<resources>
    <string name="app_name">Student App</string>
    <string name="si_deseas_unirte_a_la_comunidad_puedes_registrarte_o_iniciar_sesi_n_si_ya_posees_una_cuenta">Si deseas unirte a la comunidad puedes registrarte o iniciar sesión si ya posees una cuenta</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="hublogo">HubLogo</string>
    <string name="e_mail">e-mail</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ovidaste_la_contrase_a">Ovidaste la contraseña?</string>
    <string name="o_inicia_sesion_con">o inicia sesion con</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="ingresar">Ingresar</string>
    <string name="descubre_las_ltimas_noticias_y_actualizaciones">Descubre las últimas noticias y actualizaciones</string>
    <string name="apellido">Apellido</string>
    <string name="nombre">Nombre</string>
    <string name="d">D</string>
    <string name="mm">MM</string>
    <string name="yyyy">YYYY</string>
    <string name="como_te_identificas">Como te identificas?</string>
    <string name="como_te_gustaria_llamarte_en_el_hub">Como te gustaria llamarte en el Hub?</string>
    <string name="usuario">Usuario</string>
    <string name="que_estudias">Que estudias?</string>
    <string name="carrera">Carrera</string>
    <string name="aaaa">AAAA</string>
    <string name="universidad">Universidad</string>
    <string name="el_hub_te_espera">El Hub te espera!</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="otro">Otro</string>
    <string name="todo">TODO</string>
    <string name="cuentanos_un_poco_sobre_ti">Cuentanos un poco sobre ti</string>
    <string name="student_hub">Student HUB</string>
</resources>