<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Register">

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:background="@drawable/text_inputbox"
            android:ems="10"
            android:inputType="text"
            android:padding="8dp"
            android:hint="@string/apellido"
            android:textColor="#7A7272"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.243"
            android:autofillHints="" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="150dp"
            android:layout_height="175dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.012"
            app:srcCompat="@drawable/student_hub_icon"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cuentanos_un_poco_sobre_ti"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:typeface="monospace"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.149" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:background="@drawable/text_inputbox"
            android:ems="10"
            android:inputType="text"
            android:padding="8dp"
            android:hint="@string/nombre"
            android:textColor="#7A7272"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.191"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha_de_nacimiento"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:typeface="monospace"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.453" />

        <EditText
            android:id="@+id/etDay"
            android:layout_width="55dp"
            android:layout_height="50dp"
            android:background="@drawable/text_inputbox"
            android:ems="10"
            android:inputType="number"
            android:padding="8dp"
            android:hint="@string/d"
            android:textColor="#7A7272"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.193"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.489"
            android:autofillHints="" />

        <EditText
            android:id="@+id/etMonth"
            android:layout_width="79dp"
            android:layout_height="50dp"
            android:background="@drawable/text_inputbox"
            android:ems="10"
            android:inputType="number"
            android:padding="8dp"
            android:hint="@string/mm"
            android:textColor="#7A7272"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.486"
            android:autofillHints="" />

        <EditText
            android:id="@+id/etYear"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:background="@drawable/text_inputbox"
            android:ems="10"
            android:inputType="number"
            android:padding="8dp"
            android:hint="@string/yyyy"
            android:textColor="#7A7272"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.809"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.487"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="72dp"
            android:layout_marginBottom="15dp"
            android:text="@string/como_te_identificas"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:typeface="monospace"
            app:layout_constraintBottom_toTopOf="@+id/rgSex"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etLastName" />

        <RadioGroup
            android:id="@+id/rgSex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="69dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="69dp"
            android:layout_marginBottom="18dp"
            app:layout_constraintBottom_toTopOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintVertical_bias="0.033">

            <RadioButton
                android:id="@+id/rbMan"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:text="@string/hombre"
                android:textColor="#FFFFFF" />

            <RadioButton
                android:id="@+id/rbWomen"
                android:layout_width="320dp"
                android:layout_height="60dp"
                android:text="@string/mujer"
                android:textColor="#FFFFFF" />

            <RadioButton
                android:id="@+id/rbOther"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:text="@string/otro"
                android:textColor="#FFFFFF" />

        </RadioGroup>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:text="@string/como_te_gustaria_llamarte_en_el_hub"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:typeface="monospace"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.551" />

        <EditText
            android:id="@+id/etUser"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_marginStart="61dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="33dp"
            android:background="@drawable/text_inputbox"
            android:ems="10"
            android:inputType="text"
            android:padding="8dp"
            android:hint="@string/usuario"
            android:textColor="#7A7272"
            app:layout_constraintBottom_toTopOf="@+id/textView9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:layout_constraintVertical_bias="1.0"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/que_estudias"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:typeface="monospace"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.655" />

        <EditText
            android:id="@+id/etCareer"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:background="@drawable/text_inputbox"
            android:ems="10"
            android:inputType="text"
            android:padding="8dp"
            android:hint="@string/carrera"
            android:textColor="#7A7272"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.698"
            android:autofillHints="" />

        <EditText
            android:id="@+id/etEntryYear"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/text_inputbox"
            android:ems="10"
            android:inputType="date"
            android:padding="8dp"
            android:hint="@string/aaaa"
            android:textColor="#7A7272"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.792"
            android:autofillHints="" />

        <EditText
            android:id="@+id/etPasswordCreation"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:background="@drawable/text_inputbox"
            android:ems="10"
            android:inputType="textPassword"
            android:padding="8dp"
            android:hint="@string/contrase_a"
            android:textColor="#7A7272"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.932"
            android:autofillHints="" />

        <EditText
            android:id="@+id/etEmailCreation"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:background="@drawable/text_inputbox"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:hint="@string/e_mail"
            android:textColor="#7A7272"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.888"
            android:autofillHints="" />

        <EditText
            android:id="@+id/etCollege"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:background="@drawable/text_inputbox"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:hint="@string/universidad"
            android:textColor="#7A7272"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etCareer"
            app:layout_constraintVertical_bias="0.032"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="115dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="115dp"
            android:layout_marginBottom="28dp"
            android:text="@string/el_hub_te_espera"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:typeface="monospace"
            app:layout_constraintBottom_toTopOf="@+id/etEmailCreation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEntryYear"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegister"
            android:layout_width="285dp"
            android:layout_height="55dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="66dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/btn_amarillo"
            android:text="@string/registrarse"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPasswordCreation"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>